guard/11-ingresses/ingress-skipper.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-default
  namespace: skipper
spec:
  rules:
  - host: app-default.example.org
    http:
      paths:
      - backend:
          service:
            name: app-svc
            port:
              number: 80
        pathType: ImplementationSpecific
        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-login
  namespace: skipper
  annotations:
    zalando.org/skipper-predicate: Path("/login")
    zalando.org/skipper-filter: clusterClientRatelimit("login-ratelimit", 10, "1h")
spec:
  rules:
  - host: app-default.example.org
    http:
      paths:
      - backend:
          service:
            name: app-svc
            port:
              number: 80
        pathType: ImplementationSpecific

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-app
  namespace: skipper
  annotations:
    zalando.org/skipper-predicate: QueryParam("version", "^alpha$")
spec:
  rules:
  - host: app-default.example.org
    http:
      paths:
      - backend:
          service:
            name: app-svc
            port:
              number: 80
        pathType: ImplementationSpecific


---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: skipper
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
