guard/11-ingresses/tls-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress-02
spec:
  tls:
  - hosts:
      - "*.example.com"
    secretName: example-com-tls-secret
  rules:
  - host: foo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 80
