guard/11-ingresses/tls-04.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress-04
spec:
  tls:
  - hosts:
      - "*.example.com"
    secretName: example-com-tls-secret
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 80
