guard/11-ingresses/www-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: landing
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: www.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: landing-svc
              port:
                name: http
  tls:
  - hosts:
    - example.com
    - www.example.com
    secretName: landing-tls-secret
